--- a/mostrar/package.json
+++ b/mostrar/package.json
@@ -23,6 +23,7 @@
     "fron-end": "file:",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.21.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
